--- a/uJsonView.fmx
+++ b/uJsonView.fmx
@@ -13,14 +13,14 @@ object Form1: TForm1
     Size.Width = 601.000000000000000000
     Size.Height = 700.000000000000000000
     Size.PlatformDefault = False
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 0
     TabPosition = PlatformDefault
     object tbtm1: TTabItem
       CustomIcon = <
         item
         end>
-      IsSelected = True
+      IsSelected = False
       Size.Width = 55.000000000000000000
       Size.Height = 24.000000000000000000
       Size.PlatformDefault = False
@@ -248,7 +248,7 @@ object Form1: TForm1
       CustomIcon = <
         item
         end>
-      IsSelected = False
+      IsSelected = True
       Size.Width = 67.000000000000000000
       Size.Height = 24.000000000000000000
       Size.PlatformDefault = False
@@ -269,7 +269,6 @@ object Form1: TForm1
       end
       object btnObjectToJson: TButton
         Align = Top
-        Enabled = False
         Margins.Left = 10.000000000000000000
         Margins.Right = 10.000000000000000000
         Position.X = 10.000000000000000000
@@ -279,6 +278,7 @@ object Form1: TForm1
         Size.PlatformDefault = False
         TabOrder = 1
         Text = 'ObjectToJson'
+        OnClick = btnObjectToJsonClick
       end
       object btnObjectToArray: TButton
         Align = Top
